@@ -33,6 +33,8 @@ $page['scripts'] = array();
 
 require_once dirname(__FILE__).'/include/page_header.php';
 
+$themes = array_keys(Z::getThemes());
+$themes[] = THEME_DEFAULT;
 
 //	VAR			TYPE	OPTIONAL FLAGS	VALIDATION	EXCEPTION
 $fields = array(
@@ -55,7 +57,7 @@ $fields = array(
 	'enable_media' =>		array(T_ZBX_INT, O_OPT,	null,	null,		null),
 	'disable_media' =>		array(T_ZBX_INT, O_OPT,	null,	null,		null),
 	'lang' =>				array(T_ZBX_STR, O_OPT,	null,	NOT_EMPTY,	'isset({save})'),
-	'theme' =>				array(T_ZBX_STR, O_OPT,	null,	NOT_EMPTY,	'isset({save})'),
+	'theme' =>				array(T_ZBX_STR, O_OPT,	null,	IN('"'.implode('","', $themes).'"'), 'isset({save})'),
 	'autologin' =>			array(T_ZBX_INT, O_OPT,	null,	IN('1'),	null),
 	'autologout' => array(T_ZBX_INT, O_OPT,	null,	BETWEEN(90, 10000), null, _('Auto-logout (min 90 seconds)')),
 	'url' =>				array(T_ZBX_STR, O_OPT,	null,	null,		'isset({save})'),
